--- a/PFWindow/App.config
+++ b/PFWindow/App.config
@@ -1,6 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="PFWindow.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+    <userSettings>
+        <PFWindow.Properties.Settings>
+            <setting name="PreviewFrameColor" serializeAs="String">
+                <value>Red</value>
+            </setting>
+            <setting name="PreviewShadowAlpha" serializeAs="String">
+                <value>128</value>
+            </setting>
+            <setting name="PreviewShadowColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="Sizes" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string>1980x1080 Computer Mannagement,984x706</string>
+                        <string>1980x1080 DeviceManager,779x570</string>
+                        <string>1980x1080 Edge,928x1050</string>
+                        <string>1980x1080 Explorer,1125x634</string>
+                        <string>1980x1080 Local Group Policies,752x528</string>
+                        <string>1980x1080 Registry Editor,1424x758</string>
+                        <string>1980x1080 Settings,1200x932</string>
+                        <string>1980x1080 Task Manager,664x591</string>
+                        <string>1980x1080 Visual Studio 2022,1716x929</string>
+                        <string>1980x1080 Windows Media Player,1520x855</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
+        </PFWindow.Properties.Settings>
+    </userSettings>
 </configuration>
