--- a/PFWindow/App.config
+++ b/PFWindow/App.config
@@ -26,11 +26,16 @@
                         <string>1920x1080 DeviceManager,779x570</string>
                         <string>1920x1080 Edge,928x1050</string>
                         <string>1920x1080 Explorer,1125x634</string>
+                        <string>1920x1080 Google Chrome,931x1023</string>
                         <string>1920x1080 Local Group Policies,752x528</string>
+                        <string>1920x1080 Mozilla Firefox,1286x970</string>
+                        <string>1920x1080 Notepad++,1010x693</string>
                         <string>1920x1080 Registry Editor,1424x758</string>
                         <string>1920x1080 Settings,1200x932</string>
                         <string>1920x1080 Task Manager,664x591</string>
                         <string>1920x1080 Visual Studio 2022,1716x929</string>
+                        <string>1920x1080 Visual Studio Code,1024x768</string>
+                        <string>1920x1080 WinMerge,1426x751</string>
                         <string>1920x1080 Windows Media Player,1520x855</string>
                     </ArrayOfString>
                 </value>
