上下左右寄せ機能を追加

--- a/PFWindow/PFWindow.csproj
+++ b/PFWindow/PFWindow.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="CaptureEngine.cs" />
     <Compile Include="DrawingEngine.cs" />
+    <Compile Include="EnumAndStringPair.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
